rModels work. GLTF rewrite